--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,9 @@
   package="com.projaito.android.damn_api"
   android:versionCode="1"
   android:versionName="1.0">
+
+  <uses-permission android:name="android.permission.INTERNET" />
+
   <application android:label="@string/app_name" >
     <activity android:name="MainActivity"
       android:label="@string/app_name">
